# mangadex-dl-wui-vibed

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.gitea/workflows/: ci.yml  docker-publish.yml  update-descriptions.yml
app/: __init__.py  cache.py  cleanup.py  config.py  downloader.py  routes.py  tasks.py  validators.py  worker.py
app/static/: app.js  style.css
app/templates/: base.html  cache.html  index.html
app/templates/partials/: _app.js  _description.html  _download_form.html  _footer.html  _manga_card.html  _navbar.html  _style.css
assets/logo/: README.md  main.pxo
docs/: docker-registries-readme.md  frd.md  test-cases.md  user-stories.md
scripts/: check_cache_minified.py  check_minified.py  ci.sh  debug_poll_config.py  pre-commit.sh
tests/: __init__.py  conftest.py  test_cache.py  test_cleanup.py  test_config.py  test_downloader.py  test_integration.py  test_routes.py  test_tasks.py  test_ui.py  test_validators.py  test_worker.py
