[project]
name = "mangadex-dl-wui"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1,<4",
    "rq>=2.0,<3",
    "redis>=5.0,<6",
    "gunicorn>=23.0,<24",
    "mangadex-downloader>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=6.0,<7",
    "pytest-timeout>=2.3,<3",
    "black>=24.0,<25",
    "isort>=5.13,<6",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-redis>=4.6,<5",
    "fakeredis>=2.26,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "PT", "SIM", "ARG"]
ignore = ["S603", "S607"]  # subprocess calls are intentional

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "SIM", "S108"]  # asserts, unused args, simplify, and temp file checks OK in tests
"app/routes.py" = ["ARG001"]  # unused args in stubs (TDD)
"app/config.py" = ["S108"]  # /tmp usage is intentional per spec

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true  # for mangadex-downloader

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "app.*"
# Relax checking for stub implementations (TDD)
allow_untyped_defs = true
check_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=30"
markers = [
    "integration: end-to-end integration tests (may require Redis)",
]
